# ImGuiApplication

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
shared/: ImGuiApplicationStyleSettingsLayer.xml  Settings.xml
shared/localizations/: ImGuiApplicationLocalizationKeys.xml
source/: ImGuiApplication.h
source/Core/: ImGuiApplication.cpp  ImGuiApplication.h  ImGuiApplicationLayer.cpp  ImGuiApplicationLayer.h  ImGuiApplicationObject.cpp  ImGuiApplicationObject.h  ImGuiApplicationRenderer.h  ImGuiApplicationSerializable.h  ImGuiApplicationThreadPool.h
source/Core/FactoryObject/: Complex.h  DynamicGraph.cpp  DynamicGraph.h  DynamicGraphEdge.cpp  DynamicGraphEdge.h  DynamicGraphNode.cpp  DynamicGraphNode.h  DynamicGraphObject.h  FactoryObject.cpp  FactoryObject.h  IPugiXMLSerializable.h  Singleton.h  UUID4Generator.h  Utils.h
source/Core/FunctionalBlock/: FunctionalBlock.cpp  FunctionalBlock.h  FunctionalBlockExecutionContext.h  FunctionalBlockExecutionEnvironment.cpp  FunctionalBlockExecutionEnvironment.h  FunctionalBlockPort.cpp  FunctionalBlockPort.h  FunctionalBlockPortsConnectionLine.cpp  FunctionalBlockPortsConnectionLine.h
source/Layers/: ImGuiApplicationDialogLayer.h  ImGuiApplicationFileSystemDialogLayer.cpp  ImGuiApplicationFileSystemDialogLayer.h  ImGuiApplicationFileSystemLayer.h
source/Layers/Canvas/: ImGuiApplicationScene2DCanvas.cpp  ImGuiApplicationScene2DCanvas.h  ImGuiApplicationScene2DCanvasItem.h  ImGuiApplicationScene2DCanvasItemHierarchy.h
source/Layers/Decorations/: ImGuiApplicationFontsLayer.h  ImGuiApplicationFontsProvider.h  ImGuiApplicationStyleLayer.h  ImGuiApplicationStyleSettingsLayer.h
source/Layers/Dialogs/: ImGuiApplicationDialog.cpp  ImGuiApplicationDialog.h  ImGuiApplicationDialogLayer.cpp  ImGuiApplicationDialogLayer.h  ImGuiApplicationFileSystemDialog.cpp  ImGuiApplicationFileSystemDialog.h  ImGuiApplicationFileSystemDialogLayer.cpp  ImGuiApplicationFileSystemDialogLayer.h
source/Layers/Settings/: ImGuiApplicationSettings.cpp  ImGuiApplicationSettings.h  ImGuiApplicationSettingsColors.cpp  ImGuiApplicationSettingsColors.h  ImGuiApplicationSettingsFonts.cpp  ImGuiApplicationSettingsFonts.h
source/Layers/Tools/: ImGuiApplicationFileSystemWatcher.h
source/Sandbox/: FactoryObjectRect.h
source/Widgets/: ImGuiApplicationWindow.cpp  ImGuiApplicationWindow.h
tools/glad/include/glad/: glad.h
tools/glad/src/: glad.c
tools/iconv-lite/: iconvlite.h
